<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
        <string name="app_name">Grandpa Dialer</string>
        <string name="farright_text">I am the far right pane. I have an ImageButton control.</string>
        <string name="right_text">Lion looking right in the right pane.</string>
        <string name="middle_text">MONKEY in the middle pane.</string>
        <string name="left_text">Zebra leaping left in the left pane.</string>
        <string name="farleft_text">I am the far left pane. I have a Button.</string>



    <!-- Label for the "Done" button on the far left of action mode toolbars. -->
    <string name="abc_action_mode_done">Done</string>
    <!-- Content description for the action bar "home" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_home_description">Navigate home</string>
    <!-- Content description for the action bar "up" affordance. [CHAR LIMIT=NONE] -->
    <string name="abc_action_bar_up_description">Navigate up</string>
    <!-- Content description for the action menu overflow button. [CHAR LIMIT=NONE] -->
    <string name="abc_action_menu_overflow_description">More options</string>

    <!-- SearchView accessibility description for search button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_search">Search</string>
    <!-- SearchView accessibility description for search text field [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_query">Search query</string>
    <!-- SearchView accessibility description for clear button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_clear">Clear query</string>
    <!-- SearchView accessibility description for submit button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_submit">Submit query</string>
    <!-- SearchView accessibility description for voice button [CHAR LIMIT=NONE] -->
    <string name="abc_searchview_description_voice">Voice search</string>

    <!-- ActivityChooserView - accessibility support -->
    <!-- Description of the shwoing of a popup window with activities to choose from. [CHAR LIMIT=NONE] -->
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <!-- Title for a button to expand the list of activities in ActivityChooserView [CHAR LIMIT=25] -->
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <!-- Description of a share target (both in the list of such or the default share button) in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <!-- Description of the choose target button in a ShareActionProvider (share UI). [CHAR LIMIT=NONE] -->
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="Vibration">vibration</string>
    <string name="SpeakerON">Speaker On</string>
    <string name="speaker_on">Speaker ON</string>
    <string name="Cancel">Cancel</string>
    <string name="Save">Save</string>

</resources>