<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_SyncFrequencykey"
        android:entries="@array/contactDetails"
        android:entryValues="@array/phones"
        android:summary="@string/middle_text"
        android:title="@string/middle_text" ></ListPreference>

    <PreferenceCategory android:title="@string/farright_text" >
        <CheckBoxPreference
        android:defaultValue="false"
        android:key="vibration"
        android:title="@string/Vibration" >
         </CheckBoxPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="speaker"
            android:title="@string/SpeakerON" >
        </CheckBoxPreference>



    </PreferenceCategory>

</PreferenceScreen>

