<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/callerImage"
        android:cropToPadding="true"
        android:adjustViewBounds="false"
        android:fadeScrollbars="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/name"
        style="@android:style/Theme.Holo.Light"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Chose Image"
        android:id="@+id/chooseImage"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/phone"
        android:text="Phone Number"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />



    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speaker_on"
        android:id="@+id/speakerON"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Vibration"
        android:id="@+id/vibretion"
        android:layout_marginTop="20dp"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/cancel"
            android:layout_marginLeft="30dp"
            android:singleLine="false"
            android:layout_weight="1" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Save"
            android:id="@+id/save"
            android:layout_marginLeft="30dp"
            android:singleLine="false"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>